Add users routes
